// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the Text Component correctly 1`] = `
<h1
  className="sc-htpNat fvsWxT"
>
  Das ist ein Text
</h1>
`;

exports[`renders the Text Component correctly 2`] = `
<h2
  className="sc-bxivhb kGhdvP"
>
  Das ist ein Text
</h2>
`;

exports[`renders the Text Component correctly 3`] = `
<h3
  className="sc-ifAKCX jyCNEj"
>
  Das ist ein Text
</h3>
`;

exports[`renders the Text Component correctly 4`] = `
<h4
  className="sc-EHOje hSMNoi"
  color="error"
  scale="xl"
>
  Das ist ein Text
</h4>
`;

exports[`renders the Text Component correctly 5`] = `
<h5
  className="sc-bZQynM OJxgE"
>
  Das ist ein Text
</h5>
`;

exports[`renders the Text Component correctly 6`] = `
<h6
  className="sc-gzVnrw cSCheu"
>
  Das ist ein Text
</h6>
`;

exports[`renders the Text Component correctly 7`] = `
<p
  className="sc-htoDjs gTWsUo"
>
  Das ist ein Text
</p>
`;

exports[`renders the Text Component correctly 8`] = `
<a
  className="sc-dnqmqq iblwMP"
>
  Das ist ein Text
</a>
`;

exports[`renders the Text Component correctly 9`] = `
<span
  className="sc-gZMcBi ikdkUz"
>
  Das ist ein Text
</span>
`;

exports[`renders the Text Component correctly 10`] = `
<label
  className="sc-iwsKbI fSZIvm"
>
  Das ist ein Text
</label>
`;

exports[`renders the Text Component correctly 11`] = `
<span
  className="sc-gZMcBi bpweKd"
  color="error"
  scale="xl"
>
  Das ist ein Text
</span>
`;
